ServicesV2/F20ITONKTSEISGr13/ingress.yaml
  
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: f20itonkingressgr13
  namespace: itonk-tseis-gr13
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: itonk-tseis-gr13.dk
      http:
        paths:
          - path: /currentStocks/(.*)
            backend:
              serviceName: f20itonkservicegr13psoc
              servicePort: 8080
          - path: /stockTaxing/(.*)
            backend:
              serviceName: f20itonkservicegr13ttc
              servicePort: 8081
          - path: /requesters/(.*)
            backend:
              serviceName: f20itonkservicegr13ssr
              servicePort: 8082
          - path: /stockProviders/(.*)
            backend:
              serviceName: f20itonkservicegr13ssp
              servicePort: 8083
          - path: /transactions/(.*)
            backend:
              serviceName: f20itonkservicegr13stb
              servicePort: 8084
status:
  loadBalancer:
    ingress:
      - ip: 34.76.205.89
